# lambda

./: LambdaParser.hs  Makefile  README.md  lambda.cabal  lambda.hs  stack.yaml
repl/: Main.hs
src/: Lambda.hs  LambdaParser.hs  LambdaREPL.hs
src/Data/: Lambda.hs
src/Data/Lambda/: Internal.hs  Parser.hs  REPL.hs
test/: LambdaParserSpec.hs  LambdaSpec.hs  REPLSpec.hs
