name:             lambda
version:          0.0.0
license:          GPL
license-file:     LICENSE
copyright:        (c) 2016 Gustav Behm
author:           Gustav Behm <gustav.behm@gmail.com>
build-type:       Simple
cabal-version:    >= 1.8

library
  exposed-modules: Lambda, LambdaParser, LambdaREPL
  ghc-options: -Wall
  hs-source-dirs: src
  build-depends: base, fgl, mtl, parsec, QuickCheck, readline

executable lambda
  main-is: Main.hs
  ghc-options: -Wall
  build-depends: base, lambda
  hs-source-dirs: repl

test-suite spec
  type: exitcode-stdio-1.0
  ghc-options: -Wall
  hs-source-dirs: test
  main-is: Spec.hs
  build-depends: base, fgl, mtl, lambda, hspec, QuickCheck
